--- a/src/index.html
+++ b/src/index.html
@@ -36,38 +36,38 @@
 
         <!-- Description -->
         <div class="mt-6 text-justify">
-            <p class="text-gray-600 text-sm">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sed porttitor lectus. Nam
-                consectetur egestas pulvinar. Nullam non leo ut metus tempus cursus. Donec viverra quam sed elementum
-                efficitur. Aenean id nulla ultricies, finibus elit eu, euismod magna. Mauris quis diam bibendum, varius
-                ligula sit amet, porta metus. Nulla facilisi. Phasellus ultrices, mi vitae eleifend vulputate, libero
-                nunc aliquam ex, quis ultrices mauris tortor scelerisque ligula. Fusce pharetra, ligula nec feugiat
-                accumsan, dolor lectus lacinia purus, id sollicitudin ante mauris sit amet elit. Phasellus quam lectus,
-                ullamcorper fringilla urna eu, cursus rhoncus lacus. Sed venenatis accumsan consectetur. Donec ornare
-                sollicitudin lacus, ut volutpat ipsum. Sed quis tortor in lorem auctor consequat et eget elit. Cras
-                laoreet sapien in tempor viverra.
-
-                Curabitur feugiat convallis odio, et rutrum dui laoreet sit amet. Sed tempus nisi sed lorem ornare, eget
-                sollicitudin augue euismod. Vivamus at lacus tempus purus egestas convallis sit amet quis nibh. Duis
-                vestibulum eleifend consectetur. Fusce sed dictum ligula. Ut in efficitur eros. Ut ut lectus at erat
-                rhoncus tempus. Nam porta, nulla nec laoreet euismod, justo augue tincidunt sem, ac imperdiet magna arcu
-                a quam. Praesent id quam finibus, mollis sem a, eleifend massa. Vivamus fermentum tortor est, sed
-                pellentesque lectus porta nec. Nullam aliquet ante sit amet magna vestibulum consectetur. Cras diam
-                dolor, euismod quis laoreet et, laoreet id tellus.
-
-                Nam malesuada, nisi ut commodo pharetra, diam nisl rutrum tellus, eu placerat nulla ipsum vitae lacus.
-                Nullam id efficitur libero. Vestibulum sollicitudin a magna a venenatis. Donec ultricies nulla a urna
-                tempus, quis tempor urna efficitur. In accumsan elit ante, non tempor nulla blandit sodales. Nunc
-                interdum sem id purus consectetur, ac venenatis sem feugiat. Sed luctus nisi quis lorem tincidunt
-                mollis. Aenean massa elit, condimentum sit amet felis et, ultrices mattis quam. Vivamus vehicula orci
-                vitae nulla posuere, eget faucibus turpis molestie.
-
-                Nam placerat, metus non consequat consequat, enim sapien interdum felis, id volutpat nunc massa at quam.
-                Curabitur vestibulum lacus nec felis elementum fringilla. Sed quis mollis nisl. Sed vitae turpis nec
-                arcu consectetur imperdiet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
-                inceptos himenaeos. Duis egestas ante nec porta sollicitudin. Phasellus lacinia tellus vitae congue
-                rutrum. Curabitur iaculis velit sit amet convallis mollis. Ut tincidunt nisl eget venenatis scelerisque.
+            <p>
+                Bienvenue sur <strong>NaMaster</strong>, votre plateforme de référence pour la recherche de
+                <strong>masters</strong> et d’informations détaillées sur les établissements qui les proposent. Que vous
+                soyez
+                en quête d’un parcours correspondant à vos ambitions ou que vous souhaitiez explorer vos options,
+                <strong>NaMaster</strong> est là pour vous accompagner à chaque étape.
             </p>
+            <p>Grâce à une interface intuitive et des outils performants, vous pouvez :</p>
+            <ul>
+                <li><strong>Rechercher</strong> des masters selon vos centres d'intérêt, vos critères géographiques, ou
+                    encore selon des spécificités propres à chaque domaine.</li>
+                <li><strong>Découvrir</strong> des informations complètes sur les établissements et les formations
+                    qu’ils proposent, afin de vous aider à faire des choix éclairés.</li>
+                <li><strong>Sauvegarder</strong> vos formations préférées grâce à notre système de favoris pour y
+                    revenir facilement.</li>
+            </ul>
+            <p>
+                <strong>NaMaster</strong>, c’est plus qu’un simple site de recherche : c’est un véritable compagnon pour
+                vous guider
+                dans l’une des étapes les plus importantes de votre parcours universitaire.
+            </p>
+            <p>
+                <em>Ce projet a été réalisé dans le cadre d’une <strong>Séance d’Apprentissage et d’Évaluation
+                        (SAÉ)</strong> lors
+                    de notre seconde année de <strong>BUT Métiers du Multimédia et de l’Internet (MMI)</strong>.
+                    Il reflète notre engagement à concevoir des outils numériques utiles et accessibles, en mettant en
+                    pratique
+                    nos compétences en <strong>développement web</strong>, <strong>design d’interfaces</strong> et
+                    <strong>gestion de projet</strong>.</em>
+            </p>
+            <p>Merci de nous faire confiance pour votre avenir académique. Explorez <strong>NaMaster</strong> et trouvez
+                le master qui vous correspond !</p>
         </div>
 
         <!-- Section Contact -->
