--- a/src/footer.html
+++ b/src/footer.html
@@ -24,7 +24,7 @@
 
             <div class="grid grid-cols-2 col-span-1 justify-items-center gap-x-2">
                 <div
-                    class="flex bg-gray-600 rounded-full m-5 xl:h-32 xl:w-32 sm:h-12 sm:w-12 h-10 w-10 justify-center items-center">
+                    class="flex bg-gray-600 rounded-full m-5 2xl:h-32 xl:h-32 xl:w-32 sm:h-12 sm:w-12 h-10 w-10 justify-center items-center">
                     <p class="text-white font-bold">RSN</p>
                 </div>
 
