--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,8 @@
                 vous guider
                 dans l’une des étapes les plus importantes de votre parcours universitaire.
             </p>
+            <!-- Barre de séparation -->
+            <div class="h-px bg-gray-400 my-2 mx-12"></div>
             <p>
                 <em>Ce projet a été réalisé dans le cadre d’une <strong>Séance d’Apprentissage et d’Évaluation
                         (SAÉ)</strong> lors
@@ -66,6 +68,8 @@
                     nos compétences en <strong>développement web</strong>, <strong>design d’interfaces</strong> et
                     <strong>gestion de projet</strong>.</em>
             </p>
+            <!-- Barre de séparation -->
+            <div class="h-px bg-gray-400 my-2 mx-12"></div>
             <p>Merci de nous faire confiance pour votre avenir académique. Explorez <strong>NaMaster</strong> et trouvez
                 le master qui vous correspond !</p>
         </div>
