mise a jour bordure haute pages header

--- a/src/etablissements.html
+++ b/src/etablissements.html
@@ -13,7 +13,7 @@
   <script src="./js/navBarre.js"></script>
 </head>
 
-<body class="bg-gray-100 text-gray-800">
+<body class="mt-[8rem] bg-gray-100 text-gray-800">
 
     <header>
         <div id="header-container"></div>
