--- a/src/profil.html
+++ b/src/profil.html
@@ -12,7 +12,7 @@
     <div id="header-container"></div>
 </header>
 
-<body class="bg-gray-100 text-gray-800">
+<body class="mt-[8rem] bg-gray-100 text-gray-800">
 
     <main class="p-6">
         <!-- Section Profil -->
