--- a/src/header.html
+++ b/src/header.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <header class="bg-gray-800 flex justify-between items-center p-4 rounded-b-3xl h-20">
+    <header class="fixed top-0 left-0 w-full z-50 bg-gray-800 flex justify-between items-center p-4 rounded-b-3xl h-20">
         <!-- si le justify-between ne fonctionne pas, ajouter : style="display: flex; justify-content: space-between;"-->
 
         <!-- ||||||||||| -->
