resultat marge header

--- a/src/resultat.html
+++ b/src/resultat.html
@@ -20,7 +20,7 @@
   <div id="header-container"></div>
 </header>
 
-<body>
+<body class="mt[8rem]">
   <div class="grid grid-cols-1 gap-4 lg:mx-10 mb-8">
     <h1 class="font-bold text-5xl text-center lg:text-7xl">Les diffèrents Masters</h1>
 
