--- a/src/footer.html
+++ b/src/footer.html
@@ -9,7 +9,7 @@
             <a href="APropos.html">A propos de nous</a>
             <a href="Faq.html">Faq</a>
         </div>
-        <div class="grid grid-cols-2 md:grid-cols-1 col-span-1 justify-items-center gap-x-2 ">
+        <div class="grid grid-cols-2 col-span-1 justify-items-center gap-x-2 ">
             <div class="grid grid-cols-2 col-span-1 justify-items-center gap-x-2">
                 <div
                     class="flex bg-gray-600 rounded-full m-5 xl:h-16 xl:w-16 sm:h-12 sm:w-12 h-10 w-10 justify-center items-center">
