--- a/src/header.html
+++ b/src/header.html
@@ -31,10 +31,10 @@
                             class="w-5 h-5 mr-3">
                         ACCUEIL
                     </a>
-                    <a href="./masters.html" class="flex items-center px-4 text-white hover:bg-gray-100">
+                    <a href="./resultat.html" class="flex items-center px-4 text-white hover:bg-gray-100">
                         <img src="https://cdn-icons-png.flaticon.com/512/2983/2983813.png" alt="About"
                             class="w-5 h-5 mr-3">
-                        MASTERs
+                        MASTERS
                     </a>
                     <a href="./etablissements.html" class="flex items-center px-4 text-white hover:bg-gray-100">
                         <img src="https://cdn-icons-png.flaticon.com/512/2983/2983813.png" alt="About"
