--- a/src/header.html
+++ b/src/header.html
@@ -110,7 +110,7 @@
                     id="establishments-tab">
                     ÉTABLISSEMENTS
                 </a>
-                <a href="./masters.html"
+                <a href="./resultat.html"
                     class="text-gray-500 px-4 py-2 rounded-full font-medium transition-all duration-200 hover:text-black"
                     id="masters-tab">
                     MASTERS
