--- a/src/header.html
+++ b/src/header.html
@@ -31,12 +31,12 @@
                             class="w-5 h-5 mr-3">
                         ACCUEIL
                     </a>
-                    <a href="./resultat.html" class="flex items-center px-4 text-white hover:bg-gray-100">
+                    <a href="./LesMasters.html" class="flex items-center px-4 text-white hover:bg-gray-100">
                         <img src="https://cdn-icons-png.flaticon.com/512/2983/2983813.png" alt="About"
                             class="w-5 h-5 mr-3">
                         MASTERS
                     </a>
-                    <a href="./etablissements.html" class="flex items-center px-4 text-white hover:bg-gray-100">
+                    <a href="./LesEtablissements.html" class="flex items-center px-4 text-white hover:bg-gray-100">
                         <img src="https://cdn-icons-png.flaticon.com/512/2983/2983813.png" alt="About"
                             class="w-5 h-5 mr-3">
                         ÉTABLISSEMENTs
@@ -105,12 +105,12 @@
                     id="home-tab">
                     ACCUEIL
                 </a>
-                <a href="./etablissements.html"
+                <a href="./LesEtablissements.html"
                     class="text-gray-500 px-4 py-2 rounded-full font-medium transition-all duration-200 hover:text-black"
                     id="establishments-tab">
                     ÉTABLISSEMENTS
                 </a>
-                <a href="./resultat.html"
+                <a href="./LesMasters.html"
                     class="text-gray-500 px-4 py-2 rounded-full font-medium transition-all duration-200 hover:text-black"
                     id="masters-tab">
                     MASTERS
