--- a/src/LesEtablissements.html
+++ b/src/LesEtablissements.html
@@ -22,32 +22,29 @@
 
 <body class="mt[8rem]">
   <div class="grid grid-cols-1 gap-4 lg:mx-10 mb-8">
-    <h1 class="font-bold text-5xl text-center lg:text-7xl">Les diffèrents Masters</h1>
+    <h1 class="font-bold text-5xl text-center lg:text-7xl">Les différents Établissements</h1>
 
     <a href="#">
       <div class="p-4 bg-gray-500 border rounded-md shadow-sm">
-        <h2 class="font-bold text-lg mb-2 lg:text-2xl">MASTER Xxxxxxxxx</h2>
+        <h2 class="font-bold text-lg mb-2 lg:text-2xl">ÉTABLISSEMENT Xxxxxxxxx</h2>
         <p class="text-sm text-gray-200 lg:text-lg">
-          Lorem ipsum dolor sit amet consectetur. Est nunc elit molestie vel viverra phasellus rutrum urna vulputate.
-          Orci aliquet lectus ut tristique lacus.
+          Cliquez ici pour en savor plus sur ÉTABLISSEMENT Xxxxxxxxx
         </p>
       </div>
     </a>
     <a href="#">
       <div class="p-4 bg-gray-500 border rounded-md shadow-sm">
-        <h2 class="font-bold text-lg mb-2 lg:text-2xl">MASTER Xxxxxxxxx</h2>
+        <h2 class="font-bold text-lg mb-2 lg:text-2xl">ÉTABLISSEMENT Xxxxxxxxx</h2>
         <p class="text-sm text-gray-200 lg:text-lg">
-          Lorem ipsum dolor sit amet consectetur. Est nunc elit molestie vel viverra phasellus rutrum urna vulputate.
-          Orci aliquet lectus ut tristique lacus.
+          Cliquez ici pour en savor plus sur ÉTABLISSEMENT Xxxxxxxxx
         </p>
       </div>
     </a>
     <a href="#">
       <div class="p-4 bg-gray-500 border rounded-md shadow-sm">
-        <h2 class="font-bold text-lg mb-2 lg:text-2xl">MASTER Xxxxxxxxx</h2>
+        <h2 class="font-bold text-lg mb-2 lg:text-2xl">ÉTABLISSEMENT Xxxxxxxxx</h2>
         <p class="text-sm text-gray-200 lg:text-lg">
-          Lorem ipsum dolor sit amet consectetur. Est nunc elit molestie vel viverra phasellus rutrum urna vulputate.
-          Orci aliquet lectus ut tristique lacus.
+          Cliquez ici pour en savor plus sur ÉTABLISSEMENT Xxxxxxxxx
         </p>
       </div>
     </a>
