link contact header

--- a/src/header.html
+++ b/src/header.html
@@ -49,7 +49,7 @@
                         <a href="./index.html#aPropos" class="flex items-center px-4 text-white hover:bg-gray-100">Qui
                             sommes-nous
                             ?</a>
-                        <a href="./index.html#contact" class="flex items-center px-4 text-white hover:bg-gray-100">
+                        <a href="./contact.html" class="flex items-center px-4 text-white hover:bg-gray-100">
                             Nous contacter
                         </a>
                     </div>
