--- a/src/contact.html
+++ b/src/contact.html
@@ -21,7 +21,7 @@
     <main class="p-6">
 
         <section> <!-- Section Contact -->
-            <div id="contact" class="mt-10">
+            <div id="contact" class="">
                 <h3 class="text-center text-xl font-bold">Contact</h3>
                 <hr class="my-4 border-t border-gray-300">
     
