--- a/src/rechercheETfiltres.html
+++ b/src/rechercheETfiltres.html
@@ -1,47 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- fichiers js -->
-  <script src="./js/bgMenu.js"></script>
-  <script src="./js/navBarre.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Filtres avec slider</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Swiper CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+  <!-- Swiper JS -->
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <script src="./js/filtresRecherche.js"></script>
 </head>
+
 <body>
-    <div class="mt-6 px-4">
-        <!-- Barre de recherche -->
-        <div class="flex justify-center">
-          <div class="relative w-full max-w-lg">
-            <input 
-              type="text" 
-              placeholder="Rechercher" 
-              class="w-full px-4 py-3 border border-gray-300 rounded-full bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-400" 
-            />
-            <!-- Icône de recherche -->
-            <button class="absolute top-1/2 transform -translate-y-1/2 right-4">
-              <img 
-                src="https://cdn-icons-png.flaticon.com/512/622/622669.png" 
-                alt="Search Icon" 
-                class="w-5 h-5"
-              >
-            </button>
+  <div class="mt-6 px-4">
+    <!-- Barre de recherche -->
+    <div class="flex justify-center">
+      <div class="relative w-full max-w-lg">
+        <input type="text" placeholder="Rechercher"
+          class="w-full px-4 py-3 border border-gray-300 rounded-full bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-400" />
+        <!-- Icône de recherche -->
+        <button class="absolute top-1/2 transform -translate-y-1/2 right-4">
+          <img src="https://cdn-icons-png.flaticon.com/512/622/622669.png" alt="Search Icon" class="w-5 h-5" />
+        </button>
+      </div>
+    </div>
+
+    <!-- Filtres -->
+    <div class="mt-4">
+      <!-- Filtres visibles -->
+      <div id="filters-container" class="grid grid-cols-2 gap-3 sm:grid-cols-3 lg:flex lg:justify-center lg:gap-4">
+        <!-- Les 5 premiers filtres apparaîtront ici -->
+      </div>
+
+      <!-- Slider pour les autres filtres -->
+      <div class="mt-4">
+        <div class="swiper-container">
+          <div class="swiper-wrapper" id="slider-container">
+            <!-- Les autres filtres seront ajoutés ici -->
           </div>
-        </div>
-      
-        <!-- Filtres -->
-        <div class="mt-4 grid grid-cols-2 gap-3 sm:grid-cols-3 lg:flex lg:justify-center lg:gap-4">
-          <button class="bg-gray-200 py-2 px-4 rounded-full text-center text-gray-800 text-sm shadow-sm">Filter X</button>
-          <button class="bg-gray-200 py-2 px-4 rounded-full text-center text-gray-800 text-sm shadow-sm">Filter X</button>
-          <button class="bg-gray-200 py-2 px-4 rounded-full text-center text-gray-800 text-sm shadow-sm">Filter X</button>
-          <button class="bg-gray-200 py-2 px-4 rounded-full text-center text-gray-800 text-sm shadow-sm">Filter X</button>
-          <button class="bg-gray-200 py-2 px-4 rounded-full text-center text-gray-800 text-sm shadow-sm">Filter X</button>
-          <button class="bg-gray-200 py-2 px-4 rounded-full text-center text-gray-800 text-sm shadow-sm">Filter X</button>
+          <!-- Flèches de navigation pour le slider -->
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
         </div>
       </div>
-       
+    </div>
+  </div>
+
+  <!-- SCRIPT DANS UN FICHIER EXTERNE-->
 
 </body>
+
 </html>
