MAJ all HTML files filtres et recherches

--- a/src/LesEtablissements.html
+++ b/src/LesEtablissements.html
@@ -11,6 +11,10 @@
   <script src="./js/bgMenu.js"></script>
   <script src="./js/navBarre.js"></script>
 
+  <!-- Swiper JS -->
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <script src="./js/filtresRecherche.js"></script>
+
   <title>Résultats NaMaster</title>
 
 </head>
