--- a/src/favoris.html
+++ b/src/favoris.html
@@ -9,8 +9,12 @@
     <script src="./js/bgMenu.js"></script>
 
     <!-- fichiers js -->
-  <script src="./js/bgMenu.js"></script>
-  <script src="./js/navBarre.js"></script>
+    <script src="./js/bgMenu.js"></script>
+    <script src="./js/navBarre.js"></script>
+
+    <!-- Swiper JS -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="./js/filtresRecherche.js"></script>
 
     <title>Favoris NaMaster</title>
 </head>
