--- a/src/master.html
+++ b/src/master.html
@@ -9,8 +9,12 @@
     <script src="./js/bgMenu.js"></script>
 
     <!-- fichiers js -->
-  <script src="./js/bgMenu.js"></script>
-  <script src="./js/navBarre.js"></script>
+    <script src="./js/bgMenu.js"></script>
+    <script src="./js/navBarre.js"></script>
+
+    <!-- Swiper JS -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="./js/filtresRecherche.js"></script>
 </head>
 
 <body class="mt-[8rem] bg-gray-100 text-gray-800">
@@ -27,7 +31,8 @@
             </div>
             <div>
                 <h2 class="text-lg font-semibold">IUT de Xxxxxxxx</h2>
-                <p class="text-sm text-gray-600">Lorem ipsum dolor sit amet consectetur. Fermentum leo eget ipsum in dui ultrices morbi id.</p>
+                <p class="text-sm text-gray-600">Lorem ipsum dolor sit amet consectetur. Fermentum leo eget ipsum in dui
+                    ultrices morbi id.</p>
             </div>
         </div>
 
@@ -41,35 +46,51 @@
         <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-4">
             <div class="bg-white rounded-lg shadow-md p-4">
                 <h4 class="text-lg font-semibold">MASTER Xxxxxxxx</h4>
-                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.</p>
+                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc
+                    elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.
+                </p>
             </div>
             <div class="bg-white rounded-lg shadow-md p-4">
                 <h4 class="text-lg font-semibold">MASTER Xxxxxxxx</h4>
-                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.</p>
+                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc
+                    elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.
+                </p>
             </div>
             <div class="bg-white rounded-lg shadow-md p-4">
                 <h4 class="text-lg font-semibold">MASTER Xxxxxxxx</h4>
-                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.</p>
+                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc
+                    elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.
+                </p>
             </div>
             <div class="bg-white rounded-lg shadow-md p-4">
                 <h4 class="text-lg font-semibold">MASTER Xxxxxxxx</h4>
-                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.</p>
+                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc
+                    elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.
+                </p>
             </div>
             <div class="bg-white rounded-lg shadow-md p-4">
                 <h4 class="text-lg font-semibold">MASTER Xxxxxxxx</h4>
-                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.</p>
+                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc
+                    elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.
+                </p>
             </div>
             <div class="bg-white rounded-lg shadow-md p-4">
                 <h4 class="text-lg font-semibold">MASTER Xxxxxxxx</h4>
-                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.</p>
+                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc
+                    elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.
+                </p>
             </div>
             <div class="bg-white rounded-lg shadow-md p-4">
                 <h4 class="text-lg font-semibold">MASTER Xxxxxxxx</h4>
-                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.</p>
+                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc
+                    elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.
+                </p>
             </div>
             <div class="bg-white rounded-lg shadow-md p-4">
                 <h4 class="text-lg font-semibold">MASTER Xxxxxxxx</h4>
-                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.</p>
+                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc
+                    elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.
+                </p>
             </div>
         </div>
     </main>
