--- a/src/profil.html
+++ b/src/profil.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profil</title>
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- Swiper JS -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="./js/filtresRecherche.js"></script>
 </head>
 
 <header>
