--- a/src/footer.html
+++ b/src/footer.html
@@ -11,27 +11,28 @@
         </div>
         <div class="grid grid-cols-2 col-span-1 justify-items-center gap-x-2 ">
             <div class="grid grid-cols-2 col-span-1 justify-items-center gap-x-2">
-                <div
+                <a href="https://www.instagram.com"
                     class="flex bg-gray-600 rounded-full m-5 xl:h-16 xl:w-16 sm:h-12 sm:w-12 h-10 w-10 justify-center items-center">
+                    
                     <p class="text-white font-bold">RSN</p>
-                </div>
+                </a>
 
-                <div
+                <a href="https://www.instagram.com"
                     class="flex bg-gray-600 rounded-full m-5 xl:h-16 xl:w-16 sm:h-12 sm:w-12 h-10 w-10 justify-center items-center">
                     <p class="text-white font-bold">RSN</p>
-                </div>
+                </a>
             </div>
 
             <div class="grid grid-cols-2 col-span-1 justify-items-center gap-x-2">
-                <div
+                <a href="https://www.instagram.com"
                     class="flex bg-gray-600 rounded-full m-5 xl:h-16 xl:w-16 sm:h-12 sm:w-12 h-10 w-10 justify-center items-center">
                     <p class="text-white font-bold">RSN</p>
-                </div>
+                </a>
 
-                <div
+                <a href="https://www.instagram.com"
                     class="flex bg-gray-600 rounded-full m-5 xl:h-16 xl:w-16 sm:h-12 sm:w-12 h-10 w-10 justify-center items-center">
                     <p class="text-white font-bold">RSN</p>
-                </div>
+                </a>
             </div>
 
         </div>
