header recherche & filtres

--- a/src/header.html
+++ b/src/header.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style-tailwind.css">
+
+    <!-- fichiers js -->
+    <script src="./js/bgMenu.js"></script>
+    <script src="./js/navBarre.js"></script>
+
+    <!-- Swiper JS -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="./js/filtresRecherche.js"></script>
 </head>
 
 <body>
@@ -131,27 +139,27 @@
 
     <script>
         fetch('rechercheETfiltres.html')
-        .then(response => response.text())
-        .then(data => {
-            // Insère le contenu HTML dans le conteneur
-            const container = document.getElementById('search-container');
-            container.innerHTML = data;
+            .then(response => response.text())
+            .then(data => {
+                // Insère le contenu HTML dans le conteneur
+                const container = document.getElementById('search-container');
+                container.innerHTML = data;
 
-            // Trouve et exécute tous les scripts inclus dans le HTML
-            const scripts = container.querySelectorAll('script');
-            scripts.forEach(script => {
-                const newScript = document.createElement('script');
-                if (script.src) {
-                    // Si le script a un src, charge-le via une nouvelle balise <script>
-                    newScript.src = script.src;
-                } else {
-                    // Sinon, exécute le contenu inline
-                    newScript.textContent = script.textContent;
-                }
-                document.body.appendChild(newScript);
-            });
-        })
-        .catch(error => console.error('Error loading content:', error));
+                // Trouve et exécute tous les scripts inclus dans le HTML
+                const scripts = container.querySelectorAll('script');
+                scripts.forEach(script => {
+                    const newScript = document.createElement('script');
+                    if (script.src) {
+                        // Si le script a un src, charge-le via une nouvelle balise <script>
+                        newScript.src = script.src;
+                    } else {
+                        // Sinon, exécute le contenu inline
+                        newScript.textContent = script.textContent;
+                    }
+                    document.body.appendChild(newScript);
+                });
+            })
+            .catch(error => console.error('Error loading content:', error));
     </script>
 
 </body>
