--- a/src/footer.html
+++ b/src/footer.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="./css/style-tailwind.css" type="text/css" /> <!--NE FONCTIONNE PAS-->
     <div class="grid md:grid-cols-2">
         <div class="grid grid-cols-2 col-span-1 sm:justify-items-center justify-items-start gap-y-3 ">
-            <a href="./index.html#contact">Contact</a>
+            <a href="contact.html">Contact</a>
             <a href="mentionsLegales.html">Mentions légales</a>
             <a href="APropos.html">A propos de nous</a>
             <a href="Faq.html">Faq</a>
