--- a/src/rechercheETfiltres.html
+++ b/src/rechercheETfiltres.html
@@ -30,21 +30,22 @@
     <!-- Filtres -->
     <div class="mt-4">
       <!-- Filtres visibles -->
-      <div id="filters-container" class="grid grid-cols-2 gap-3 sm:grid-cols-3 lg:flex lg:justify-center lg:gap-4">
+      <div id="filters-container"
+        class="overflow-x-auto flex gap-3 lg:justify-center lg:gap-4 scrollbar-thin scrollbar-thumb-gray-400 scrollbar-track-gray-200 relative">
         <!-- Les 5 premiers filtres apparaîtront ici -->
       </div>
 
       <!-- Slider pour les autres filtres -->
-      <div class="mt-4">
+      <!-- <div class="mt-4">
         <div class="swiper-container">
-          <div class="swiper-wrapper" id="slider-container">
-            <!-- Les autres filtres seront ajoutés ici -->
-          </div>
-          <!-- Flèches de navigation pour le slider -->
-          <div class="swiper-button-next"></div>
+          <div class="swiper-wrapper" id="slider-container"> -->
+      <!-- Les autres filtres seront ajoutés ici -->
+      <!-- </div> -->
+      <!-- Flèches de navigation pour le slider -->
+      <!-- <div class="swiper-button-next"></div>
           <div class="swiper-button-prev"></div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 
