--- a/src/Faq.html
+++ b/src/Faq.html
@@ -62,8 +62,10 @@
                     <h4 class="text-lg md:text-xl font-semibold">Tony, pourquoi es-tu si créatif ?</h4>
                     <p class="mt-2 text-sm md:text-base text-gray-600">
                         Je dirais que c’est le résultat d'une éternelle recherche de nouvelles idées, mais aussi de
-                        l'inspiration que j'ai dans les films et comics que j'adore ! C'est probablement aussi le café
-                        qui m'aide à garder l'inspiration toute la journée.
+                        l'inspiration que j'ai dans les films et comics que j'adore ! Et non, ce n'est pas le café qui
+                        me garde inspiré, mais plutôt mes sessions sur Garen, un champion que j'affectionne
+                        particulièrement. Rien de tel qu'un bon combat sur la Faille de l'Invocateur pour booster la
+                        créativité !
                     </p>
                 </div>
 
