Correction des classes CSS pour le corps et l'alignement du titre dans LesMasters.html

--- a/src/LesMasters.html
+++ b/src/LesMasters.html
@@ -24,7 +24,7 @@
   <div id="header-container"></div>
 </header>
 
-<body class="mt[8rem]">
+<body class="pt-20">
   <!-- <div class="grid grid-cols-1 gap-4 lg:mx-10 mb-8">
     <h1 class="font-bold text-5xl text-center lg:text-7xl">Les diffèrents Masters</h1>
 
@@ -40,7 +40,7 @@
   </div> -->
   <main class="p-6 sm:mx-8 lg:my-10">
     
-    <div class="text-center sm:pt-8 my-8 ">
+    <div class="text-center">
       <h1 class="font-bold text-5xl sm:my-10 sm:py-5 lg:text-7xl lg:py-6">Les différents Masters</h1>
     </div>
     <div class="mt-8 pb-8">
